fix: margin issue on mobile

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -55,6 +55,10 @@
     .menu-item-name {
         font-size: 80%;
     }
+
+    #lang-switcher {
+        margin: 0;
+    }
 }
 
 .nav-toggle {
